css/lightbox.css
.preview {
	width: 100%;
}

.gallery {
}

@media screen and (min-width: 426px) {
  .gallery {
    display: grid;
    gap: var(--size-2);
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    grid-template-areas: 
      "prim feli terc"
      "cato nuev nuev"
      "invi invi esti"
      "invi invi vert"
      "vert2 roto vert"
      "vert2 vent vein"
      "ulti ulti deca"
      "ulti ulti clar"
      "ulti ulti rayo"
      ".... .... mano"
    ;
  }
}
@media screen and (min-width: 1023px) {
  .gallery {
    grid-template-columns: repeat(4, 1fr);
    grid-template-areas: 
      "prim feli terc cuat"
      "nuev nuev nuev cinc"
      "invi invi diez seis"
      "rayo siet cato esti"
      "roto roto deca vert"
      "roto roto mano vert"
      "ulti . vein vert2"
      "ulti vent doble vert2"
      "ulti quin clar ."
    ;
  }
}

.gallery__item:nth-child(1) {
  grid-area: prim;
}
.gallery__item:nth-child(2) {
  grid-area: feli;
}
.gallery__item:nth-child(3) {
  grid-area: terc;
}
.gallery__item:nth-child(4) {
  grid-area: cuat;
}
.gallery__item:nth-child(5) {
  grid-area: cinc;
}
.gallery__item:nth-child(6) {
  grid-area: seis;
}
.gallery__item:nth-child(7) {
  grid-area: siet;
}
.gallery__item:nth-child(8) {
  grid-area: invi;
}
.gallery__item:nth-child(9) {
  grid-area: nuev;
}
.gallery__item:nth-child(10) {
  grid-area: diez;
}
.gallery__item:nth-child(11) {
  grid-area: esti;
}
.gallery__item:nth-child(14) {
  grid-area: cato;
}
.gallery__item:nth-child(15) {
  grid-area: quin;
}
.gallery__item:nth-child(16) {
  grid-area: doble;
}
.gallery__item:nth-child(17) {
  grid-area: vent;
}
.gallery__item:nth-child(18) {
  grid-area: deca;
}
.gallery__item:nth-child(19) {
  grid-area: vert;
}
.gallery__item:nth-child(20) {
  grid-area: vert2;
}
.gallery__item:nth-child(21) {
  grid-area: vein;
}
.gallery__item:nth-child(22) {
  grid-area: mano;
}
.gallery__item:nth-child(23) {
  grid-area: rayo;
}
.gallery__item:nth-child(24) {
  grid-area: roto;
}
.gallery__item:nth-child(25) {
  grid-area: clar;
}
.gallery__item:nth-child(26) {
  grid-area: ulti;
}

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100%;
  overflow: auto;
  background-color: rgba(42, 41, 41, 0.89);
}

.modal-content {
  position: relative;
  display: grid;
  margin: auto;
  padding: 0 0 0 0;
  width: 40%;
}
@media screen and (max-width: 550px) {
  .modal-content {
    width: 80%;
  }
}

.slide {
  display: none;
}

.image-slide {
	width: 100%;
  padding: var(--size-2) 0;
}

.modal-preview {
	width: 100%;
}

.dots {
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
}

/* img.preview, img.modal-preview {
  opacity: 0.6;
} */

img.active,
.preview:hover,
.modal-preview:hover {
  opacity: 1;
}

img.hover-shadow {
  transition: 0.3s;
}

.hover-shadow:hover {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  cursor: alias;
  border: 1px solid var(--secondary-color);
} 

.close {
  color: rgb(255 255 255 / 50%);
  position: fixed;
  top: 0;
  right: 10px;
  font-size: var(--size-3);
  z-index: 1;
}

.close:hover,
.close:focus {
  color: var(--secondary-color);
  text-decoration: none;
  cursor: pointer;
}

.close:hover {
  transform: scale(1.25);
}

.previous,
.next {
  cursor: pointer;
  position: absolute;
  top: 40%;
  width: auto;
  padding: var(--size-2);
  margin-top: -50px;
  color: rgb(255 255 255 / 50%);
  font-weight: bold;
  font-size: var(--size-2);
  transition: 0.6s ease;
  user-select: none;
  -webkit-user-select: none;
}

.previous {
  left: -40px;
}

.next {
  right: -40px;
}

.previous:hover,
.next:hover {
  color: rgba(255, 255, 255, 0.8);
}

